# cybergym-neurips-25

./: .gitignore  README.md  pyproject.toml
scripts/: verify_agent_result.py
scripts/agents/codex/: README.md  install.sh  run.py
scripts/agents/codex/codex-repo/codex-cli/: Dockerfile.cybergym
scripts/agents/codex/codex-repo/codex-cli/src/: cli.tsx
scripts/agents/cybench/: Dockerfile  README.md  run.py
scripts/agents/cybench/challenge_template/: init_script.sh
scripts/agents/cybench/challenge_template/metadata/: metadata.json  requirements.sh
scripts/agents/cybench/cybench-repo/agent/dataclasses/: agent_spec.py
scripts/agents/cybench/cybench-repo/agent/models/: non_helm.py
scripts/agents/enigma/: README.md  install.sh  run.py
scripts/agents/enigma/challenge_template/: challenge.json
scripts/agents/enigma/config/: ctf_pwn.yaml  default_ctf.yaml
scripts/agents/enigma/enigma-repo/: .gitignore  requirements.txt
scripts/agents/enigma/enigma-repo/sweagent/agent/: models.py
scripts/agents/enigma/enigma-repo/sweagent/environment/: swe_env.py
scripts/agents/openhands/: README.md  run.py
scripts/agents/openhands/openhands-repo/openhands/core/: logger.py  message.py
scripts/agents/openhands/template/: config.toml
scripts/server_data/: download.py  download_chunks.sh  download_subset.py
src/cybergym/: utils.py
src/cybergym/server/: __main__.py  pocdb.py  preload.py  server_utils.py  types.py
src/cybergym/task/: arvo_task.py  gen_task.py  oss_fuzz_task.py  submit.template  types.py
(+5 files in other folders)
